--- a/class.html
+++ b/class.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="https://andhrauniversity.edu.in/andhrauniversity.edu.in/img/logo_ico.png" type="image/x-icon">
     <link rel="icon" href="https://andhrauniversity.edu.in/img/favicon.html">
-    <title>Andhra University | Visakhapatnam</title>
+    <title>Andhra University | Online Class</title>
     <!-- Bootstrap core CSS -->
     <link href="https://andhrauniversity.edu.in/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome CSS -->
