--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ body.loading {
         Page Contains
     </h4>
     <div id="contents-icon" class="cursor-pointer" onclick="toggleContents()">
-        <img id="contents-icon-image" src="/image-icons/menu-right.png" alt="Contents Icon" width="24" height="24">
+        <img id="contents-icon-image" src="https://i.ibb.co/wNmSLpg/130918.png" alt="Contents Icon" width="24" height="24">
     </div>
 
     </div>
@@ -2693,10 +2693,10 @@ function toggleContents() {
     var iconImage = document.getElementById('contents-icon-image');
     if (contents.style.display === 'none') {
         contents.style.display = 'block';
-        iconImage.src = 'image-icons/cross.png';
+        iconImage.src = 'https://i.ibb.co/6ZqzwgN/cross-23.png';
     } else {
         contents.style.display = 'none';
-        iconImage.src = 'image-icons/menu-right.png';
+        iconImage.src = 'https://i.ibb.co/wNmSLpg/130918.png';
     }
 }
 
