--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ body.loading {
                                         data-ghost-classes="bg-color-entity-ghost-background"
                                         data-ghost-url="https://static.licdn.com/aero-v1/sc/h/6qpnald1ddva78jx4bnnl3vw"
                                         alt="" aria-busy="false"
-                                        src="https://scontent.fvga2-1.fna.fbcdn.net/v/t39.30808-1/300405894_490038329794380_5304263242629956128_n.jpg?stp=dst-jpg_p200x200&_nc_cat=102&ccb=1-7&_nc_sid=5f2048&_nc_ohc=m8u0p4Muq44Q7kNvgHC9BPU&_nc_ht=scontent.fvga2-1.fna&oh=00_AYD5SQUo8xHX0Zr8PNCYYKExNDICg88N6qmORYHYXEV2RA&oe=6643E124" style="border: 3px solid #fff">
+                                        src="https://i.ibb.co/1rk6hFk/images-1.jpg" style="border: 3px solid #fff">
 
 
                                     <div class="pl-0.5 grow break-words">
