--- a/index.html
+++ b/index.html
@@ -846,12 +846,12 @@ body.loading {
                                             </a> 
                                         </span>
                                     </li>
-                                    <li
+                                   <!-- <li
                                         class="hidden-summary__summary-item flex text-md text-color-text font-normal leading-open items-center mb-1.5 last:mb-0">
                                         <div
                                             class="hidden-summary__summary-item-icon-container flex items-center justify-center shrink-0 mr-1">
                                             <!-- Instagram Icon -->
-                                            <a href="https://youtube.com/@melam_rahul" target="_blank">
+                                           <!-- <a href="https://youtube.com/@melam_rahul" target="_blank">
                                                 <img src="https://cdn-icons-png.flaticon.com/512/2111/2111432.png"
                                                     alt="GitHub Icon" width="24" height="24" />
                                             </a>
@@ -862,7 +862,7 @@ body.loading {
                                                 </a> 
                                         </span>
 
-                                    </li>
+                                    </li>-->
                                     <li
                                         class="hidden-summary__summary-item flex text-md text-color-text font-normal leading-open items-center mb-1.5 last:mb-0">
                                         <div
