--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@ body.loading {
                                             </a>
                                         </div>
                                         <span class="hidden-summary__summary-item-text overflow-hidden break-words">
-                                           <a href="https://t.ly/irfrc" style="text-decoration: none; color: green">
+                                           <a href="https://t.ly/irfrc?__cf_chl_tk=cwcYTuu7xSpzIj_J.9urY99A0umlkx4HM06H_DZODGc-1715917994-0.0.1.1-1599" style="text-decoration: none; color: green">
                                                    WhatsApp
                                             </a> 
                                         </span>
