--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta name="robots" content="index, follow">
 <meta property="og:title" content="Melam Rahul">
 <meta property="og:description" content="B.Tech ECE Student at Andhra University, Vizag">
-<meta property="og:url" content="https://rahul.zya.me">
+<meta property="og:url" content="https://Melam Rahul">
 <meta property="og:image" content="https://i.ibb.co/qMR5Ndf/me.png">
 <meta property="og:site_name" content="Melam Rahul's Website">
 <meta name="twitter:card" content="summary_large_image">
