--- a/tel.html
+++ b/tel.html
@@ -25,6 +25,9 @@
         nav {
     background: #313c7e;
     color: #fff;
+            height: 20px;
+            align-items: center;
+            justify-content: center;
     height: 35px; /* Adjust the height */
     padding: 10px 0;
     text-align: center;
@@ -167,7 +170,7 @@
         </div>
     </nav>
     <div id="అ" class="content active">
-        <a class="song-link" href="https://rahul.serv00.net">1. అంజూరపు చెట్లు పూయకుండినను</a>
+        <a class="song-link" href="https://melamrahul.github.io/song1.html">1. అంజూరపు చెట్లు పూయకుండినను</a>
         <a class="song-link" href="song2_url.html">2. అంతా నూతనమే యేసులో</a>
         <a class="song-link" href="song3_url.html">3. అందరి ప్రభువు ఆ యేసే</a>
         <a class="song-link" href="song4_url.html">4. అందాల ఆశాకిరణం</a>
