--- a/tel.html
+++ b/tel.html
@@ -117,7 +117,7 @@
 </head>
 <body>
     <div class="header">
-        Church At Guntur
+        Telugu Songs
     </div>
     <nav>
         <div class="action-names">
