--- a/song1.html
+++ b/song1.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bible Study Details</title>
+    <title>Telugu Songs</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;700&family=Nunito:wght@400;700&display=swap">
     <style>
         body {
             font-family: 'Google Sans', sans-serif;
-            background-color: #f4f4f4;
+            background-color: #fff;
             margin: 0;
             padding: 0;
-            background-color: #fff;
-          }
+        }
 
         .navbar {
             position: fixed;
@@ -42,7 +41,6 @@
             margin: 70px auto 50px auto;
             margin-top: 80px;
             background-color: #fff;
-            
         }
 
         .container h2 {
@@ -51,13 +49,25 @@
             color: #007bff;
         }
 
-      
-
         img {
             max-width: 100%;
             height: auto;
             display: block;
             margin: 0 auto;
+        }
+
+        .audio-section {
+            height: 70px;
+            background-color: #266905;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+            margin-top: 20px; /* Optional: Adds space above the audio section */
+        }
+
+        .audio-section audio {
+            width: 90%;
         }
     </style>
 </head>
@@ -67,8 +77,13 @@
         <h1>Telugu Songs</h1>
     </div>
     <div class="container">
-        <img src="https://i.ibb.co/d26JC4B/Screenshot-20240530-184100-UESI-TS.jpg" alt="Bible Study Details">
+        <img src="https://i.ibb.co/d26JC4B/Screenshot-20240530-184100-UESI-TS.jpg" alt="Song 1">
+    </div>
+    <div class="audio-section">
+        <audio controls>
+            <source src="http://melamrahul.github.io/hub/Neelone Anandham _ Evan Mark Ronald _ Telugu Christian Songs 2023.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
 </body>
-</html>
 </html>
