--- a/song1.html
+++ b/song1.html
@@ -23,7 +23,7 @@
             padding: 15px;
             height: 35px;
             border-bottom: 3px solid #ccc;
-            z-index: 1000; /* Ensures the navbar is on top of other elements */
+            z-index: 1000;
         }
 
         .navbar h1 {
@@ -62,12 +62,53 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-direction: column;
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-            margin-top: 20px; /* Optional: Adds space above the audio section */
+            margin-top: 20px;
+            padding: 10px;
+            color: #fff;
         }
 
-        .audio-section audio {
-            width: 90%;
+        .audio-controls {
+            display: flex;
+            align-items: center;
+            width: 100%;
+        }
+
+        .audio-controls button {
+            background: none;
+            border: none;
+            color: #fff;
+            font-size: 20px;
+            cursor: pointer;
+            outline: none;
+            margin-right: 10px;
+        }
+
+        .audio-controls button:hover {
+            color: #ff5c6d;
+        }
+
+        .progress-container {
+            width: 100%;
+            background: #fff;
+            height: 5px;
+            border-radius: 5px;
+            overflow: hidden;
+            margin: 0 10px;
+            flex: 1;
+        }
+
+        .progress {
+            width: 0%;
+            height: 100%;
+            background: #ff5c6d;
+            transition: width 0.1s;
+        }
+
+        .time {
+            font-size: 12px;
+            margin-left: 10px;
         }
     </style>
 </head>
@@ -80,10 +121,50 @@
         <img src="https://i.ibb.co/d26JC4B/Screenshot-20240530-184100-UESI-TS.jpg" alt="Song 1">
     </div>
     <div class="audio-section">
-        <audio controls>
-            <source src="http://melamrahul.github.io/hub/Neelone Anandham _ Evan Mark Ronald _ Telugu Christian Songs 2023.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
+        <div class="audio-controls">
+            <button id="play-pause" onclick="togglePlayPause()">&#9658;</button>
+            <div class="progress-container">
+                <div class="progress" id="progress"></div>
+            </div>
+            <div class="time">
+                <span id="current-time">0:00</span> / <span id="duration">0:00</span>
+            </div>
+        </div>
+        <audio id="audio" src="https://www.songs.com/song1.mp3" ontimeupdate="updateProgress()"></audio>
     </div>
+
+    <script>
+        const audio = document.getElementById('audio');
+        const playPauseButton = document.getElementById('play-pause');
+        const progress = document.getElementById('progress');
+        const currentTimeElement = document.getElementById('current-time');
+        const durationElement = document.getElementById('duration');
+
+        audio.addEventListener('loadedmetadata', () => {
+            durationElement.textContent = formatTime(audio.duration);
+        });
+
+        function togglePlayPause() {
+            if (audio.paused) {
+                audio.play();
+                playPauseButton.innerHTML = '&#10074;&#10074;';
+            } else {
+                audio.pause();
+                playPauseButton.innerHTML = '&#9658;';
+            }
+        }
+
+        function updateProgress() {
+            const progressPercent = (audio.currentTime / audio.duration) * 100;
+            progress.style.width = `${progressPercent}%`;
+            currentTimeElement.textContent = formatTime(audio.currentTime);
+        }
+
+        function formatTime(seconds) {
+            const minutes = Math.floor(seconds / 60);
+            const secondsLeft = Math.floor(seconds % 60);
+            return `${minutes}:${secondsLeft < 10 ? '0' : ''}${secondsLeft}`;
+        }
+    </script>
 </body>
 </html>
