--- a/tel.html
+++ b/tel.html
@@ -171,7 +171,7 @@
     </nav>
     <div id="అ" class="content active">
         <a class="song-link" href="https://melamrahul.github.io/home/song1.html">1. అంజూరపు చెట్లు పూయకుండినను</a>
-        <a class="song-link" href="song2_url.html">2. అంతా నూతనమే యేసులో</a>
+        <a class="song-link" href="https://melamrahul.github.io/home/song1.html">2. అంతా నూతనమే యేసులో</a>
         <a class="song-link" href="song3_url.html">3. అందరి ప్రభువు ఆ యేసే</a>
         <a class="song-link" href="song4_url.html">4. అందాల ఆశాకిరణం</a>
         <!-- Add more song links as needed -->
