--- a/tel.html
+++ b/tel.html
@@ -121,7 +121,8 @@
     </div>
     <nav>
         <div class="action-names">
-            <span class="action-name active" onclick="showScreen('అ')">అ</span>
+            <span class="action-name active" onclick="showScreen('quick_links')">Quick Links</span>
+            <span class="action-name" onclick="showScreen('అ')">అ</span>
             <span class="action-name" onclick="showScreen('ఆ')">ఆ</span>
             <span class="action-name" onclick="showScreen('ఇ')">ఇ</span>
             <span class="action-name" onclick="showScreen('ఈ')">ఈ</span>
@@ -169,19 +170,22 @@
             <span class="action-name" onclick="showScreen('హ')">హ</span>
         </div>
     </nav>
-    <div id="అ" class="content active">
+    <div id="quick_links" class="content active">
         <a class="song-link" href="https://melamrahul.github.io/home/song1.html">1. అంజూరపు చెట్లు పూయకుండినను</a>
         <a class="song-link" href="https://melamrahul.github.io/home/song1.html">2. అంతా నూతనమే యేసులో</a>
         <a class="song-link" href="song3_url.html">3. అందరి ప్రభువు ఆ యేసే</a>
         <a class="song-link" href="song4_url.html">4. అందాల ఆశాకిరణం</a>
         <!-- Add more song links as needed -->
     </div>
-    <div id="ఆ" class="content">
-        <a class="song-link" href="song5_url.html">1. అంజూరపు చెట్లు పూయకుండినను</a>
-        <a class="song-link" href="song6_url.html">2. అంతా నూతనమే యేసులో</a>
-        <a class="song-link" href="song7_url.html">3. అందరి ప్రభువు ఆ యేసే</a>
-        <a class="song-link" href="song8_url.html">4. అందాల ఆశాకిరణం</a>
+    <div id="అ" class="content">
+        <a class="song-link" href="https://rahul.serv00.net/mymarks">Marks</a>
+        <a class="song-link" href="https://rahul.serv00.net/visitors">Visitors</a>
+        <a class="song-link" href="https://www-y2mate.com/en278/">Youtube Converter</a>
+        <a class="song-link" href="https://instagram.com/">Instagram</a>
         <!-- Add more song links as needed -->
+    </div>
+    <div id="ఆ" class="content">
+        <!-- Add song links for this section -->
     </div>
     <div id="ఇ" class="content">
         <!-- Add song links for this section -->
