--- a/tel.html
+++ b/tel.html
@@ -10,6 +10,13 @@
             margin: 0;
             padding: 0;
             background-color: #f5f5f5;
+           -webkit-tap-highlight-color: transparent; /* For iOS Safari */
+            tap-highlight-color: transparent; /* For other browsers */
+            -webkit-touch-callout: none; /* Disable long press on mobile */
+            -webkit-user-select: none; /* Disable selection */
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
 
         .header {
