--- a/tel.html
+++ b/tel.html
@@ -128,8 +128,7 @@
     </div>
     <nav>
         <div class="action-names">
-            <span class="action-name active" onclick="showScreen('quick_links')">Quick Links</span>
-            <span class="action-name" onclick="showScreen('అ')">అ</span>
+            <span class="action-name active" onclick="showScreen('అ')">అ</span>
             <span class="action-name" onclick="showScreen('ఆ')">ఆ</span>
             <span class="action-name" onclick="showScreen('ఇ')">ఇ</span>
             <span class="action-name" onclick="showScreen('ఈ')">ఈ</span>
@@ -184,15 +183,12 @@
         <a class="song-link" href="song4_url.html">4. అందాల ఆశాకిరణం</a>
         
     </div>
-    <div id="quick_links" class="content">
+    <div id="ఆ" class="content">
         <a class="song-link" href="https://rahul.serv00.net/mymarks">Marks</a>
         <a class="song-link" href="https://rahul.serv00.net/visitors">Visitors</a>
         <a class="song-link" href="https://www-y2mate.com/en278/">Youtube Converter</a>
         <a class="song-link" href="https://instagram.com/">Instagram</a>
         <!-- Add more song links as needed -->
-    </div>
-    <div id="ఆ" class="content">
-        <!-- Add song links for this section -->
     </div>
     <div id="ఇ" class="content">
         <!-- Add song links for this section -->
