--- a/church.html
+++ b/church.html
@@ -266,7 +266,7 @@
                 <h4><a style="color: #04258f; font-size: 23px;">Sisters Meet </a> | <a style="color: #029c08; font-size: 21px;">Online</a></h4>
                 
                 <span class="horizontal-line"></span>
-                <a href="https://meet.google.com/jpt-bzmh-vpt" class="button" style="border: 3px solid #E74C3C;">Join Meeting</a>
+                <a href="https://meet.google.com/sks-nrvw-tbj" class="button" style="border: 3px solid #E74C3C;">Join Meeting</a>
             </div>
         </div>
         </div>
@@ -278,7 +278,7 @@
                 <h4><a style="color: #04258f; font-size: 23px;">Youth Meeting </a> | <a style="color: #029c08; font-size: 21px;">Online</a></h4>
                 
                 <span class="horizontal-line"></span>
-                <a href="https://meet.google.com/jpt-bzmh-vpt" class="button" style="border: 3px solid #4268ff">Join Meeting</a>
+                <a href="https://meet.google.com/euk-jkyk-mqm" class="button" style="border: 3px solid #4268ff">Join Meeting</a>
             </div>
         </div>
         </div>
