--- a/class.html
+++ b/class.html
@@ -340,8 +340,8 @@
         <div class="footer-row3" style="border-radius: 10px;">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Designed by&ensp;<a href="https://t.ly/irfrc" style="text-decoration: underline; font-size: 16px"> M.Rahul</a></p>
-                    <p>Copyright © 2024&ensp;<a href="https://t.ly/irfrc"> M.Rahul</a>&ensp; 2/4 B.Tech ECE.</p>
+                    <p>Designed by&ensp;<a href="https://melamrahul.github.io/home" style="text-decoration: underline; font-size: 16px"> M.Rahul</a></p>
+                    <p>Copyright © 2024&ensp;<a href="https://melamrahul.github.io/home"> M.Rahul</a>&ensp; 2/4 B.Tech ECE.</p>
                     <p><a href="https://t.ly/irfrc"> Contact Us :</a> Andhra University, Waltair Junction, Visakhapatnam-530003, Andhra Pradesh, INDIA.   &ensp;&ensp;&ensp; &ensp;&ensp;&ensp; &ensp;&ensp;&ensp;&ensp;&ensp;Ph : 9347450441<button class="copy-bttn" type="button" onclick="window.location.href='tel:+919347450441'">
     <i class="fa-solid fa-phone"></i>  Call
   </button></p>
