--- a/index.html
+++ b/index.html
@@ -897,11 +897,11 @@ body.loading {
                                         </span>
 
                                     </li>
-                                    <li
+                                 <!--   <li
                                         class="hidden-summary__summary-item flex text-md text-color-text font-normal leading-open items-center mb-1.5 last:mb-0">
                                         <div
                                             class="hidden-summary__summary-item-icon-container flex items-center justify-center shrink-0 mr-1">
-                                            <!-- Instagram Icon -->
+                                            <!-- Instagram Icon
                                             <a href="https://youtube.com/@melam_rahul" target="_blank">
                                                 <img src="https://cdn3.iconfinder.com/data/icons/social-network-30/512/social-06-512.png"
                                                     alt="Youtube Icon" width="24" height="24" />
@@ -913,7 +913,7 @@ body.loading {
                                                 </a> 
                                         </span>
 
-                                    </li>
+                                    </li>-->
                                     <li
                                         class="hidden-summary__summary-item flex text-md text-color-text font-normal leading-open items-center mb-1.5 last:mb-0">
                                         <div
