--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ body.loading {
                                         data-ghost-classes="bg-color-entity-ghost-background"
                                         data-ghost-url="https://static.licdn.com/aero-v1/sc/h/6qpnald1ddva78jx4bnnl3vw"
                                         alt="" aria-busy="false"
-                                        src="https://media.licdn.com/dms/image/C510BAQEbtMKHDdVZyw/company-logo_200_200/0/1630572150612?e=1723680000&v=beta&t=Y9Xmk3uStw4ZmjufvzcYLoHL4ndhoGyjat3qjASDSn0" style="border: 3px solid #fff">
+                                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFTMpeEKzXlg0a7ukgi5gksVkwXiSolvRXr1UYBZbTY-8a4f8VwaJEUEHS&s=10" style="border: 3px solid #fff">
 
 
                                     <div class="pl-0.5 grow break-words">
