--- a/invitation.html
+++ b/invitation.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>🎄 Christmas Party Invitation - Dec 17</title>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
@@ -474,7 +477,7 @@
 
     <!-- Countdown -->
     <div class="countdown">
-        <div class="countdown-title">⏰ Event Starts In</div>
+        <div class="countdown-title">⏰ Program Starts In</div>
         <div class="countdown-grid">
             <div class="countdown-box">
                 <span class="countdown-num" id="days">00</span>
@@ -517,7 +520,7 @@
     <!-- Speaker -->
     <div class="speaker">
         <span class="speaker-badge">⭐ Special Guest</span>
-        <div class="speaker-name">Sis Bharathi</div>
+        <div class="speaker-name">Mis. Bharathi</div>
         <div class="venue">
             Join us for an inspiring message of hope and joy this Christmas season! 🙏✨
         </div>
@@ -690,6 +693,5 @@
         }
     });
 </script>
-
 </body>
 </html>
