--- a/invitation.html
+++ b/invitation.html
@@ -520,7 +520,7 @@
     <!-- Speaker -->
     <div class="speaker">
         <span class="speaker-badge">⭐ Special Guest</span>
-        <div class="speaker-name">Mis. Bharathi</div>
+        <div class="speaker-name">Mrs. Bharathi</div>
         <div class="venue">
             Join us for an inspiring message of hope and joy this Christmas season! 🙏✨
         </div>
