--- a/songs.html
+++ b/songs.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +10,6 @@
       padding: 0;
       box-sizing: border-box;
     }
-
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
       background: #1a1a2e;
@@ -19,19 +17,18 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 15px;
+      padding: 10px;
+      min-height: 100vh;
     }
-
     .player-container {
       background: #16213e;
       border-radius: 16px;
       border: 1.5px dashed white;
-      width: 95%;
+      width: 100%;
       max-width: 500px;
-      padding: 20px;
+      padding: 24px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
     }
-
     .tabs {
       display: flex;
       gap: 8px;
@@ -40,80 +37,75 @@
       border: 1.5px dashed white;
       margin-bottom: 24px;
     }
-
     .tab {
       flex: 1;
-      padding: 7px;
+      padding: 10px;
       background: #0f1624;
       border: none;
       border-radius: 8px;
       color: #7f8c9f;
       cursor: pointer;
-      font-size: 14px;
+      font-size: 16px;
       font-weight: 500;
       transition: all 0.2s;
+      min-height: 44px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-
     .tab.active {
       background: #e94560;
       color: #fff;
     }
-
     .playlist {
       padding-top: 0.6rem;
       border: 1.5px dashed white;
       border-radius: 1rem;
-      max-height: 50px;
+      max-height: 300px;
       overflow-y: auto;
       margin-bottom: 24px;
     }
-
     .track {
       display: flex;
       align-items: center;
-      padding: 5px;
-      margin-bottom: 10px;
+      padding: 12px;
+      margin-bottom: 8px;
       border-radius: 8px;
       padding-left: 15px;
       cursor: pointer;
       transition: background 0.2s;
+      min-height: 44px;
     }
-
     .track:hover {
       background: #0f1624;
     }
-
     .track.active {
       background: rgba(233, 69, 96, 0.2);
     }
-
     .track-num {
-      width: 20px;
-      height: 20px;
+      width: 24px;
+      height: 24px;
       background: #0f1624;
       border-radius: 6px;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 13px;
+      font-size: 14px;
       margin-right: 12px;
     }
-
     .track.active .track-num {
       background: #e94560;
     }
-
     .track-name {
-      font-size: 14px;
+      font-size: 16px;
     }
-
     .controls button {
       background: transparent;
       border: 1px solid #334155;
       color: var(--text);
       border-radius: 8px;
       width: 64px;
-      height: 36px;
+      height: 44px;
       display: inline-flex;
       align-items: center;
       justify-content: center;
@@ -122,24 +114,19 @@
       font-size: 1.6rem;
       padding-bottom: 0.8rem;
     }
-
-
     .now-playing {
       text-align: center;
       margin-bottom: 20px;
     }
-
     .now-playing-title {
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 500;
       margin-bottom: 4px;
     }
-
     .now-playing-type {
-      font-size: 13px;
+      font-size: 14px;
       color: #7f8c9f;
     }
-
     .progress-bar {
       width: 100%;
       height: 6px;
@@ -148,70 +135,66 @@
       cursor: pointer;
       margin-bottom: 8px;
     }
-
     .progress {
       height: 100%;
       background: #e94560;
       border-radius: 3px;
       width: 0%;
     }
-
     .time {
       display: flex;
       justify-content: space-between;
-      font-size: 12px;
+      font-size: 14px;
       color: #7f8c9f;
       margin-bottom: 20px;
     }
-
     .buttons {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 16px;
+      gap: 20px;
       margin-bottom: 20px;
     }
-
     .btn {
       background: none;
       border: none;
       color: #fff;
       cursor: pointer;
-      font-size: 24px;
-      padding: 8px;
+      font-size: 28px;
+      padding: 12px;
       opacity: 0.8;
       transition: opacity 0.2s;
+      min-width: 52px;
+      min-height: 52px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-
     .btn:hover {
       opacity: 1;
     }
-
     .btn-play {
-      width: 52px;
-      height: 52px;
+      width: 60px;
+      height: 60px;
       background: #e94560;
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
       opacity: 1;
+      font-size: 24px;
     }
-
     .btn-play:hover {
       background: #d63851;
     }
-
     .volume-control {
       display: flex;
       align-items: center;
       gap: 12px;
     }
-
     .volume-icon {
-      font-size: 18px;
+      font-size: 20px;
     }
-
     .volume-slider {
       flex: 1;
       height: 6px;
@@ -220,92 +203,130 @@
       border-radius: 3px;
       outline: none;
     }
-
     .volume-slider::-webkit-slider-thumb {
       -webkit-appearance: none;
-      width: 14px;
-      height: 14px;
+      width: 16px;
+      height: 16px;
       background: #e94560;
       border-radius: 50%;
       cursor: pointer;
     }
-
     .volume-slider::-moz-range-thumb {
-      width: 14px;
-      height: 14px;
+      width: 16px;
+      height: 16px;
       background: #e94560;
       border-radius: 50%;
       cursor: pointer;
       border: none;
     }
-
     .playlist::-webkit-scrollbar {
       width: 6px;
     }
-
     .playlist::-webkit-scrollbar-track {
       background: transparent;
     }
-
     .playlist::-webkit-scrollbar-thumb {
       background: #0f1624;
       border-radius: 3px;
     }
-
     .hidden {
       display: none;
     }
-
     @media (max-width: 600px) {
+      body {
+        padding: 5px;
+      }
       .player-container {
         padding: 20px;
+        border-radius: 12px;
+        width: 100%;
+        max-width: none;
       }
-
+      .tabs {
+        gap: 4px;
+        padding: 0.25rem;
+      }
+      .tab {
+        padding: 8px;
+        font-size: 14px;
+        min-height: 44px;
+      }
       .playlist {
-        max-height: 280px;
+        max-height: 40vh;
+        margin-bottom: 16px;
+      }
+      .track {
+        padding: 10px;
+        min-height: 48px;
+      }
+      .track-name {
+        font-size: 15px;
+      }
+      .now-playing-title {
+        font-size: 16px;
+      }
+      .now-playing-type {
+        font-size: 13px;
+      }
+      .time {
+        font-size: 13px;
+      }
+      .buttons {
+        gap: 16px;
+      }
+      .btn {
+        font-size: 24px;
+        padding: 10px;
+        min-width: 48px;
+        min-height: 48px;
+      }
+      .btn-play {
+        width: 56px;
+        height: 56px;
+        font-size: 20px;
+      }
+      .volume-icon {
+        font-size: 18px;
+      }
+      .volume-slider::-webkit-slider-thumb,
+      .volume-slider::-moz-range-thumb {
+        width: 14px;
+        height: 14px;
       }
     }
   </style>
 </head>
-
 <body>
   <div class="player-container">
     <div class="tabs">
       <button class="tab active" onclick="switchTab('audio')">Audio</button>
       <button class="tab" onclick="switchTab('tracks')">Tracks</button>
     </div>
-
     <div class="playlist" id="audioList"></div>
     <div class="playlist hidden" id="tracksList"></div>
-
     <div class="controls">
       <div class="now-playing">
         <div class="now-playing-title" id="nowPlaying">Select a song</div>
         <div class="now-playing-type" id="nowPlayingType">—</div>
       </div>
-
       <div class="progress-bar" onclick="seek(event)">
         <div class="progress" id="progress"></div>
       </div>
-
       <div class="time">
         <span id="currentTime">0:00</span>
         <span id="duration">0:00</span>
       </div>
-
       <div class="buttons">
         <button class="btn" onclick="prev()">⏮</button>
         <button class="btn btn-play" onclick="toggle()">▶</button>
         <button class="btn" onclick="next()">⏭</button>
       </div>
-
       <div class="volume-control">
         <span class="volume-icon">🔊</span>
         <input type="range" class="volume-slider" min="0" max="100" value="100" oninput="setVolume(this.value)">
       </div>
     </div>
   </div>
-
   <audio id="audio"></audio>
 
   <script>
@@ -430,6 +451,6 @@
     render();
     audio.volume = 0.7;
   </script>
+ 
 </body>
-
 </html>
