--- a/songs.html
+++ b/songs.html
@@ -27,8 +27,9 @@
     .player-container {
       background: #16213e;
       border-radius: 16px;
+      margin-top: 1rem;
       border: 1.5px dashed white;
-      width: 100%;
+      width: 96%;
       max-width: 500px;
       padding: 24px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
