--- a/songs.html
+++ b/songs.html
@@ -17,10 +17,10 @@
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
       background: #1a1a2e;
       color: #fff;
-      display: flex;
       justify-content: center;
       align-items: center;
-      padding: 10px;
+      padding: 20px;
+      margin: 15px;
       min-height: 100vh;
     }
 
@@ -29,8 +29,8 @@
       border-radius: 16px;
       margin-top: 1rem;
       border: 1.5px dashed white;
-      width: 96%;
-      max-width: 500px;
+      width: 100%;
+      max-width: 600px;
       padding: 24px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
     }
