--- a/songs.html
+++ b/songs.html
@@ -21,8 +21,8 @@
       align-items: center;
       padding: 20px;
       margin: 15px;
+      margin-top: 1rem;
       display: flex;
-      min-height: 100vh;
     }
 
     .player-container {
