--- a/song2.html
+++ b/song2.html
@@ -1,203 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telugu Songs</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;700&family=Nunito:wght@400;700&display=swap">
-    <link rel="stylesheet" href="https://jumpshare.com/res/cssm/jumpshare_1716981129.css">
-    <style>
-        body {
-            font-family: 'Google Sans', sans-serif;
-            background-color: #fff;
-            margin: 0;
-            padding: 0;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>House of Prayer Christmas Songs</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-        .navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background-color: #266905;
-            overflow: hidden;
-            padding: 15px;
-            height: 60px;
-            border-bottom: 3px solid #ccc;
-            z-index: 1000;
-        }
+<style>
+/* ===== EXISTING STYLES (unchanged) ===== */
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;
+  background:#1a1a2e;color:#fff;
+  display:flex;justify-content:center;
+  padding:20px;margin:15px
+}
+.player-container{
+  background:#16213e;border-radius:16px;
+  border:1.5px dashed white;
+  width:100%;max-width:600px;
+  padding:24px;box-shadow:0 8px 32px rgba(0,0,0,.4)
+}
+.tabs{display:flex;gap:8px;padding:.5rem;border:1.5px dashed white;border-radius:1rem;margin-bottom:24px}
+.tab{
+  flex:1;padding:10px;background:#0f1624;border:none;border-radius:8px;
+  color:#7f8c9f;font-size:16px;min-height:44px;
+  display:flex;align-items:center;justify-content:center;gap:6px
+}
+.tab.active{background:#e94560;color:#fff}
+.playlist{max-height:300px;overflow-y:auto;border:1.5px dashed white;border-radius:1rem;margin-bottom:24px}
+.track{display:flex;align-items:center;padding:12px;border-radius:8px;cursor:pointer}
+.track.active{background:rgba(233,69,96,.2)}
+.track-num{width:24px;height:24px;background:#0f1624;border-radius:6px;display:flex;align-items:center;justify-content:center;margin-right:12px}
+.track.active .track-num{background:#e94560}
+.track-name{font-size:16px}
 
-        .navbar h1 {
-            color: #fff;
-            margin: 0;
-            padding: 0;
-            margin-top: 3px;
-            margin-left: 55px;
-            font-size: 23px;
-            font-family: 'Nunito', sans-serif;
-        }
+.now-playing{text-align:center;margin-bottom:12px}
+.now-playing-title{font-size:18px}
+.now-playing-type{font-size:14px;color:#7f8c9f}
 
-        .container {
-            max-width: 100%;
-            margin: 70px auto 50px auto;
-            margin-top: 80px;
-            background-color: #fff;
-            text-align: center;
-        }
+.progress-bar{height:6px;background:#0f1624;border-radius:3px;margin-bottom:6px}
+.progress{height:100%;background:#e94560;width:0%}
 
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-        }
+.time{display:flex;justify-content:space-between;font-size:14px;color:#7f8c9f;margin-bottom:12px}
 
-        .audio-section {
-            margin-top: 20px;
-            margin-left: 50px;
-            padding: 10px;
-        }
+.buttons{display:flex;justify-content:center;gap:20px;margin-bottom:16px}
+.btn{background:none;border:none;color:#fff;font-size:28px;min-width:52px;min-height:52px}
+.btn-play{width:60px;height:60px;background:#e94560;border-radius:50%}
 
-        .audio-controls {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            margin-top: 10px;
-        }
+.volume-control{display:flex;align-items:center;gap:12px}
+.volume-slider{flex:1;height:6px;background:#0f1624;border-radius:3px}
 
-        .audio-controls button {
-            background: none;
-            border: none;
-            color: #266905;
-            font-size: 20px;
-            cursor: pointer;
-            outline: none;
-            margin-right: 10px;
-        }
-
-        .audio-controls button:hover {
-            color: #ff5c6d;
-        }
-
-        .progress-container {
-            width: 70%;
-            background: #e0e0e0;
-            height: 5px;
-            border-radius: 5px;
-            overflow: hidden;
-            margin: 0 10px;
-            flex: 1;
-        }
-
-        .progress {
-            width: 0%;
-            height: 100%;
-            background: #266905;
-            transition: width 0.1s;
-        }
-
-        .time {
-            font-size: 12px;
-            color: #266905;
-        }
-
-        .bottom-bar {
-            width: 100%;
-            height: 70px;
-            margin-bottom: 0px;
-            background-color: #266905;
-            margin-top: 10px;
-        }
-
-        /* NProgress styles */
-        #nprogress {
-            pointer-events: none;
-        }
-
-        #nprogress .bar {
-            background: #29d;
-            position: fixed;
-            z-index: 1031;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 2px;
-        }
-
-        #nprogress .peg {
-            display: block;
-            position: absolute;
-            right: 0;
-            width: 100px;
-            height: 100%;
-            box-shadow: 0 0 10px #29d, 0 0 5px #29d;
-            opacity: 1.0;
-            transform: rotate(3deg) translate(0, -4px);
-        }
-
-        #nprogress .spinner {
-            display: block;
-            position: fixed;
-            z-index: 1031;
-            top: 15px;
-            right: 15px;
-        }
-
-        #nprogress .spinner-icon {
-            width: 18px;
-            height: 18px;
-            box-sizing: border-box;
-            border: solid 2px transparent;
-            border-top-color: #29d;
-            border-left-color: #29d;
-            border-radius: 50%;
-            animation: nprogress-spinner 400ms linear infinite;
-        }
-
-        .nprogress-custom-parent {
-            overflow: hidden;
-            position: relative;
-        }
-
-        .nprogress-custom-parent #nprogress .spinner,
-        .nprogress-custom-parent #nprogress .bar {
-            position: absolute;
-        }
-
-        @keyframes nprogress-spinner {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-    </style>
-    <script src="https://static.jumpshare.com/res/css/modernizr.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.js"></script>
+/* ===== 🔥 NEW: EQUALIZER STYLES ===== */
+.equalizer{
+  display:flex;
+  justify-content:center;
+  gap:4px;
+  height:40px;
+  margin:12px 0;
+}
+.eq-bar{
+  width:6px;
+  background:#e94560;
+  border-radius:4px 4px 0 0;
+  height:20%;
+  transition:height .08s linear;
+}
+</style>
 </head>
 
 <body>
-    <div class="navbar">
-        <h1>Telugu Songs</h1>
-    </div>
-    <div class="container">
-        <img src="https://i.ibb.co/d26JC4B/Screenshot-20240530-184100-UESI-TS.jpg" alt="Song 1">
-    </div><div class="bottom-bar">
-    <div class="audio-section">
-        <audio id="audio" controls>
-            <source src="https://pouch.jumpshare.com/preview/KBNfVlG67mFBYKd5HHIzd_Qj3yLyj49zkYC9JFZQsk46ZART6plKsX3cnHdN_GiLQo4UF-XFRDy1DYu8XUQjXJjo3Y0-r2-DUs-fuPqhA4XICSbjvKJnN189szaJhs0cZ5SqY48qTsc7DknEFeUyMW6yjbN-I2pg_cnoHs_AmgI.mp3" type="audio/mpeg"></source>
-        </audio>
-        </div>
+
+<div class="player-container">
+
+  <div class="tabs">
+    <button class="tab active" onclick="switchTab('audio')"><i class="fas fa-music"></i> Audio</button>
+    <button class="tab" onclick="switchTab('tracks')"><i class="fas fa-list"></i> Tracks</button>
+  </div>
+
+  <div class="playlist" id="audioList"></div>
+  <div class="playlist hidden" id="tracksList"></div>
+
+  <div class="controls">
+
+    <div class="now-playing">
+      <div class="now-playing-title" id="nowPlaying">Select a song</div>
+      <div class="now-playing-type" id="nowPlayingType">—</div>
     </div>
 
-    <script>
-        // Initialize NProgress
-        NProgress.start();
-        window.addEventListener('load', () => {
-            NProgress.done();
-        });
-    </script>
+    <!-- 🔥 NEW: EQUALIZER HTML -->
+    <div class="equalizer" id="equalizer">
+      <div class="eq-bar"></div><div class="eq-bar"></div><div class="eq-bar"></div>
+      <div class="eq-bar"></div><div class="eq-bar"></div><div class="eq-bar"></div>
+      <div class="eq-bar"></div><div class="eq-bar"></div><div class="eq-bar"></div>
+      <div class="eq-bar"></div>
+    </div>
+
+    <div class="progress-bar"><div class="progress" id="progress"></div></div>
+
+    <div class="time">
+      <span id="currentTime">0:00</span>
+      <span id="duration">0:00</span>
+    </div>
+
+    <div class="buttons">
+      <button class="btn" onclick="prev()"><i class="fas fa-step-backward"></i></button>
+      <button class="btn btn-play" onclick="toggle()"><i class="fas fa-play" id="playIcon"></i></button>
+      <button class="btn" onclick="next()"><i class="fas fa-step-forward"></i></button>
+    </div>
+
+    <div class="volume-control">
+      <i class="fas fa-volume-up"></i>
+      <input type="range" class="volume-slider" min="0" max="100" value="80" oninput="setVolume(this.value)">
+    </div>
+
+  </div>
+</div>
+
+<audio id="audio"></audio>
+
+<script>
+/* ===== AUDIO + EQUALIZER LOGIC ===== */
+const audio = document.getElementById('audio');
+const eqBars = document.querySelectorAll('.eq-bar');
+
+const AudioContext = window.AudioContext || window.webkitAudioContext;
+const audioCtx = new AudioContext();
+const source = audioCtx.createMediaElementSource(audio);
+const analyser = audioCtx.createAnalyser();
+
+analyser.fftSize = 64;
+source.connect(analyser);
+analyser.connect(audioCtx.destination);
+
+const dataArray = new Uint8Array(analyser.frequencyBinCount);
+
+function animateEQ(){
+  analyser.getByteFrequencyData(dataArray);
+  eqBars.forEach((bar,i)=>{
+    bar.style.height = Math.max(10, dataArray[i]/2) + '%';
+  });
+  requestAnimationFrame(animateEQ);
+}
+animateEQ();
+
+/* ===== YOUR EXISTING PLAYER LOGIC ===== */
+let playing=false,current=0,activeTab='audio';
+
+const data={
+  audio:[
+    {name:'అందాల తార',url:'YOUR_AUDIO_URL_1'},
+    {name:'జన్మించినాడు శ్రీ యేసు',url:'YOUR_AUDIO_URL_2'}
+  ],
+  tracks:[
+    {name:'అందాల తార',url:'YOUR_TRACK_URL_1'},
+    {name:'జన్మించినాడు శ్రీ యేసు',url:'YOUR_TRACK_URL_2'}
+  ]
+};
+
+function render(){
+  audioList.innerHTML=data.audio.map((t,i)=>trackHTML(t,i,'audio')).join('');
+  tracksList.innerHTML=data.tracks.map((t,i)=>trackHTML(t,i,'tracks')).join('');
+}
+function trackHTML(t,i,type){
+  return `<div class="track" onclick="play(${i},'${type}')">
+    <div class="track-num">${i+1}</div>
+    <div class="track-name">${t.name}</div>
+  </div>`;
+}
+function play(i,tab){
+  current=i;activeTab=tab;
+  audio.src=data[tab][i].url;
+  audio.play();playing=true;
+  playIcon.className='fas fa-pause';
+  nowPlaying.textContent=data[tab][i].name;
+  nowPlayingType.textContent=tab;
+}
+function toggle(){
+  if(!audio.src)return;
+  playing?audio.pause():audio.play();
+  playing=!playing;
+  playIcon.className=playing?'fas fa-pause':'fas fa-play';
+}
+function prev(){if(current>0)play(current-1,activeTab)}
+function next(){if(current<data[activeTab].length-1)play(current+1,activeTab)}
+function setVolume(v){audio.volume=v/100}
+
+render();
+audio.volume=.8;
+</script>
+
 </body>
 </html>
