Update audio URLs in song2.html

--- a/song2.html
+++ b/song2.html
@@ -149,8 +149,8 @@ let playing=false,current=0,activeTab='audio';
 
 const data={
   audio:[
-    {name:'అందాల తార',url:'YOUR_AUDIO_URL_1'},
-    {name:'జన్మించినాడు శ్రీ యేసు',url:'YOUR_AUDIO_URL_2'}
+    {name:'అందాల తార',url:'https://pub-43e3b530db1540f4a16cdacc0e749843.r2.dev/temp-audios/%E0%B0%85%E0%B0%82%E0%B0%A6%E0%B0%BE%E0%B0%B2%20%E0%B0%A4%E0%B0%BE%E0%B0%B0_Audio.mp3'},
+    {name:'జన్మించినాడు శ్రీ యేసు',url:'https://pub-43e3b530db1540f4a16cdacc0e749843.r2.dev/temp-audios/%E0%B0%85%E0%B0%82%E0%B0%A6%E0%B0%BE%E0%B0%B2%20%E0%B0%A4%E0%B0%BE%E0%B0%B0_Audio.mp3'}
   ],
   tracks:[
     {name:'అందాల తార',url:'YOUR_TRACK_URL_1'},
